Version 6.5.1
- Changed some warnings about unused wcz flags into errors (when the corresponding instruction requires the flags)
- Fixed some problems with line numbers in errors & warnings after #include
- Various internal compiler compatibility improvements

Version 6.5.0
- Added MKDIR function for BASIC
- Added support for NeoYume style ARGv parameters in C
- Added execl() function in C
- Added DATE$, TIME$, and SETTIME functions to BASIC
- Added rewind() function in C
- Allow arguments to be passed in the BASIC CHAIN function
- Fixed `-x` option in flexcc
- Fixed interaction between Parallax FS and stdio FILEs when multiple FILEs are open
- Fixed missing mbrtowc implementation
- Fixed overly agressive type checking on BASIC CPU() for asm code
- Fixed Spin2 issue with variables named `result` in void functions
- Implemented new Spin2 REPEAT n : i syntax (thanks, Ada!), and later added REPEAT n WITH i variant
- Keep a small FCACHE even in -O0, to allow ORG to function as expected
- Made _geterror() clear the error number
- Allow & operator for string concatenation in BASIC
- Re-factored some code to reduce bloat a bit
- Updated Parallax file system to new version from Chip and Stephen

Version 6.4.0
- Added getcrc() builtin for Spin2
- Added VFS layer for Parallax flash file system
- Added recognition for "$" and "%" to __builtin_atoi
- Changed littlefs to not return . and .. entries in path search (so it matches host fs and FATFS)
- Fixed compilation error for object arrays in bytecode
- Fixed some quirks in the space/tab warning code
- Fixed incorrect expansion of field[ptr][n]~~
- Fixed an incompatibility between _tx and debug()
- Fixed timeout in _rxraw() (test was wrong way around)
- Improved range of sin and cos functions
- Improved performance of flash access in littlefs (thanks, Evan!)
- Updated -gbrk code to most recent from Chip, and add support for brk #0 interactive debug (thanks, Ada!)

Version 6.3.0