@@ -1,7 +1,9 @@
 Version 6.5.1
 - Changed some warnings about unused wcz flags into errors (when the corresponding instruction requires the flags)
 - Fixed some problems with line numbers in errors & warnings after #include
-- Various internal compiler compatibility improvements
+- Fixed a potential bug with fcaching of loops with a branch between them (thanks to Ada)
+- Improved some error messages
+- Various portability improvements for the source code itself
 
 Version 6.5.0
 - Added MKDIR function for BASIC
